<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:title="@string/menu_add_txt" />
        <item
            android:id="@+id/nav_check"
            android:title="@string/menu_check" />
        <item
            android:id="@+id/nav_delivery"
            android:title="@string/menu_delivery" />
        <item
            android:id="@+id/nav_all"
            android:title="@string/menu_all" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
