<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CheckActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="@style/ToolbarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <TextView
                android:id="@+id/title_toolbar_scan"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/check_view"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/icon_barcode"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_barcode"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:elevation="1dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/icon_qr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_qrcode"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:elevation="1dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/scan_num"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:gravity="center|start"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/icon_barcode"
        app:layout_constraintEnd_toStartOf="@+id/icon_qr"
        app:layout_constraintStart_toEndOf="@+id/icon_barcode"
        app:layout_constraintTop_toTopOf="@+id/icon_barcode"
        android:elevation="1dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:elevation="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/icon_qr"
        app:layout_constraintStart_toStartOf="@id/icon_barcode"
        app:layout_constraintTop_toBottomOf="@id/scan_num"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/scan_txt_title"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/scanner_view"
        app:layout_constraintStart_toStartOf="@+id/scanner_view"
        app:layout_constraintTop_toBottomOf="@+id/scan_num" />

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="false"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="false"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@color/colorBase"

        app:frameCornersRadius="0dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.5"
        app:frameThickness="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="#77000000" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorError"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/scanner_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scanner_ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:elevation="1dp"
        android:gravity="center"
        android:textColor="@color/colorError"
        android:text="@string/scan_text_ok"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scanner_view"
        app:layout_constraintEnd_toEndOf="@+id/scanner_view"
        app:layout_constraintStart_toStartOf="@+id/scanner_view" />

</androidx.constraintlayout.widget.ConstraintLayout>